rusty-cdk-macros/tests/fails/maximum_message_size_boundary_high.stderr
error: value should be at most 1048576
 --> tests/fails/maximum_message_size_boundary_high.rs:4:38
  |
4 |     let size = maximum_message_size!(1048577);
  |                                      ^^^^^^^
